<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bottomnavigationview.ui.fragments.WeatherFragment"
        android:label="@string/title_Weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.bottomnavigationview.ui.fragments.PersonalInfoFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/fragment_personal_info" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bottomnavigationview.ui.fragments.NotesFragment"
        android:label="@string/title_Notes"
        tools:layout="@layout/fragment_notes" />
</navigation>