<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yr"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/note_item_background"
            android:elevation="4dp"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/input_city"
                android:inputType="text"
                android:textSize="24sp"
                android:padding="8dp"
                android:background="@drawable/note_item_background"
                android:elevation="2dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:textSize="12sp"
                    android:background="@drawable/note_item_background"
                    android:elevation="2dp"
                    android:padding="8dp"
                    android:text="@string/get_data" />

                <Button
                    android:id="@+id/btn_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:textSize="12sp"
                    android:background="@drawable/note_item_background"
                    android:elevation="2dp"
                    android:padding="8dp"
                    android:text="@string/location" />
            </LinearLayout>

            <TextView
                android:id="@+id/city_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/city"
                android:textColor="@color/darkBlue"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temperature_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temp"
                android:textColor="@color/darkBlue"
                android:textSize="24sp"
                android:layout_margin="8dp" />

            <ImageView
                android:id="@+id/weather_iv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_sun" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wind_degree_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/degree"
                    android:textColor="@color/darkBlue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wind_speed_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/speed"
                    android:textColor="@color/darkBlue"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/max_temperature_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/max_temp"
                    android:textColor="@color/darkBlue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/min_temperature_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_margin="8dp"
                    android:text="@string/min_temp"
                    android:textColor="@color/darkBlue"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/humidity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/vlazh"
                android:textColor="@color/darkBlue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pressure_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/atmos"
                android:textColor="@color/darkBlue"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
